<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="15sp"
        android:text="@string/MainTitle"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"

        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/infoBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainTitle"
        android:layout_marginHorizontal="35sp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loanAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/teal_700"
            android:ems="10"
            android:hint="@string/SumHint"
            android:inputType="textPersonName"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textHint" />

        <Spinner
            android:id="@+id/loanType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loanAmount"
            android:layout_marginTop="10sp"
            android:minHeight="35sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loanType"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Длительность (мес)"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"

                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/radio_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="checkButton"
                android:text="@string/oneYear" />

            <RadioButton
                android:id="@+id/radio_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/twoYears" />

            <RadioButton
                android:id="@+id/radio_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/threeYears" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="10sp"
            android:text="@string/checkBox" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/infoBlock"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="50sp">

        <Button
            android:id="@+id/resultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:text="@string/ResultButton"
            android:textColor="@color/textPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.076" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/resultButton"
            android:textAlignment="center"

            android:textColor="@color/textHint"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultButton"
            app:layout_constraintVertical_bias="0.109" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>